# to-md

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-commit
skills/to-markdown/: SKILL.md
skills/to-md/: SKILL.md
skills/to-md/references/: baseline_diff.py  qa.md  slides.md  styleguide.md
src/to_md/: __init__.py  __main__.py  cli.py  core.py
src/to_md/converters/: ai_ocr.py  docx.py  epub.py  latex.py  pdf.py  url.py
tests/: conftest.py  test_cli.py  test_core.py  test_docx.py  test_epub.py  test_latex.py  test_pdf.py  test_url.py
