[project]
name = "to-md"
version = "1.1.5"
description = "Convert LaTeX, PDF, EPUB, DOCX, and URLs to clean Markdown"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
url = ["trafilatura>=2.1.0"]
docx = ["mammoth>=1.8.0", "markdownify>=0.14.1"]
epub = ["ebooklib>=0.18", "beautifulsoup4>=4.12.0"]
marker = ["marker-pdf"]
surya = ["surya-ocr", "Pillow"]
ocr = ["anthropic>=0.39.0"]
all = ["to-md[url,docx,epub]"]
dev = ["pytest>=8.0", "to-md[all]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/to_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access (deselect with '-m \"not network\"')",
    "slow: tests that take a long time to run",
]
